--- a/aspnet-fitness-frog/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/aspnet-fitness-frog/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -21,6 +21,7 @@
 <h2>@ViewBag.Title</h2>
 
 
+@Html.ValidationSummary("the Following errors were found :", new {@class ="alert alert-danger" })
 @using (Html.BeginForm())
 {
         <div class="row">
@@ -40,6 +41,7 @@
                         <div class="form-group">
                                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
                                 @Html.DropDownListFor(m => m.ActivityId, (SelectList)ViewBag.ActivitiesSelectListItems,"Select an Activity", new { @class = "form-control" })
+                                @*@Html.ValidationMessageFor(m => m.ActivityId)*@
                         </div>
 
                         <div class="form-group">
