--- a/aspnet-fitness-frog/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/aspnet-fitness-frog/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -2,45 +2,46 @@
 @using Treehouse.FitnessFrog.Models
 
 @{
-    ViewBag.Title = "Add Entry";
+        ViewBag.Title = "Add Entry";
 
-    //var selectListITmes = new[]
-    //{
-    //    new SelectListItem() { Value = "1" , Text ="Item 1", Selected = false },
-    //    new SelectListItem() { Value = "2" , Text = "Item 2", Selected = true}
-    //};
+        //var selectListITmes = new[]
+        //{
+        //    new SelectListItem() { Value = "1" , Text ="Item 1", Selected = false },
+        //    new SelectListItem() { Value = "2" , Text = "Item 2", Selected = true}
+        //};
 
-    //var items = new[]
-    //{
-    //    new {Id =1 , Name = "Item 1" },
-    //    new {Id =2 , Name = "Item 2"}
-    //};
-    //var selectListITmes = new SelectList(items, "Id", "Name");
+        //var items = new[]
+        //{
+        //    new {Id =1 , Name = "Item 1" },
+        //    new {Id =2 , Name = "Item 2"}
+        //};
+        //var selectListITmes = new SelectList(items, "Id", "Name");
 }
 
 <h2>@ViewBag.Title</h2>
 
 
-@Html.ValidationSummary("the Following errors were found :", new {@class ="alert alert-danger" })
+
 @using (Html.BeginForm())
 {
+        @Html.ValidationSummary("the Following errors were found :", new { @class = "alert alert-danger" })
         <div class="row">
 
                 <div class="col-md-6">
 
-                        @{ 
-                            var formattedDate = string.Format("{0:d}", Model.Date);
+                        @{
+                                var formattedDate = string.Format("{0:d}", Model.Date);
                         }
 
                         <div class="form-group">
-                                @Html.LabelFor(m => m.Date , new { @class = "control-label" })
-                                @Html.TextBoxFor(m => m.Date,"{0:d}",new { @class = "form-control datepicker" })
-                                
+                                @Html.LabelFor(m => m.Date, new { @class = "control-label" })
+                                @Html.TextBoxFor(m => m.Date, "{0:d}", new { @class = "form-control datepicker" })
+
                         </div>
 
                         <div class="form-group">
                                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
-                                @Html.DropDownListFor(m => m.ActivityId, (SelectList)ViewBag.ActivitiesSelectListItems,"Select an Activity", new { @class = "form-control" })
+                                @Html.DropDownListFor(m => m.ActivityId, (SelectList)ViewBag.ActivitiesSelectListItems, "Select an Activity", new { @class = "form-control" })
                                 @*@Html.ValidationMessageFor(m => m.ActivityId)*@
                         </div>
 
@@ -54,52 +55,52 @@
                                 <div>
                                         <label class="radio-inline">
                                                 @Html.RadioButtonFor(m => m.Intensity,
-                                                        Entry.IntensityLevel.Low) @Entry.IntensityLevel.Low
-                                        </label>
-                                        <label class="radio-inline">
-                                                @Html.RadioButtonFor(m => m.Intensity,
-                                                        Entry.IntensityLevel.Medium) @Entry.IntensityLevel.Medium
-                                        </label>
-                                        <label class="radio-inline">
-                                                @Html.RadioButtonFor(m => m.Intensity,
-                                                        Entry.IntensityLevel.High) @Entry.IntensityLevel.High
+                                                             Entry.IntensityLevel.Low) @Entry.IntensityLevel.Low
                                                 </label>
+                                                <label class="radio-inline">
+                                                        @Html.RadioButtonFor(m => m.Intensity,
+                                                                     Entry.IntensityLevel.Medium) @Entry.IntensityLevel.Medium
+                                                        </label>
+                                                        <label class="radio-inline">
+                                                                @Html.RadioButtonFor(m => m.Intensity,
+                                                                             Entry.IntensityLevel.High) @Entry.IntensityLevel.High
+                                                                </label>
 
-</div>
-                        </div>
+                                                        </div>
+                                                </div>
 
-                        <div class="form-group">
-                                <div class="checkbox">
-                                        <label>
-                                                @Html.CheckBoxFor(m => m.Exclude) @Html.DisplayNameFor(m => m.Exclude)
-                                        </label>
-                                        
+                                                <div class="form-group">
+                                                        <div class="checkbox">
+                                                                <label>
+                                                                        @Html.CheckBoxFor(m => m.Exclude) @Html.DisplayNameFor(m => m.Exclude)
+                                                                </label>
+
+                                                        </div>
+                                                </div>
+
+                                        </div>
+
+                                        <div class="col-md-6">
+
+                                                <div class="form-group">
+                                                        @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
+                                                        @Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" })
+                                                </div>
+
+                                        </div>
+
+                                        <div class="col-md-12">
+                                                <div class="pad-top">
+                                                        <button type="submit" class="btn btn-success btn-lg margin-right">
+                                                                <span class="glyphicon glyphicon-save"></span> Save
+                                                        </button>
+                                                        <a href="@Url.Action("Index")" class="btn btn-warning btn-lg">
+                                                                <span class="glyphicon glyphicon-remove"></span> Cancel
+                                                        </a>
+                                                </div>
+                                        </div>
+
                                 </div>
-                        </div>
-
-                </div>
-
-                <div class="col-md-6">
-
-                        <div class="form-group">
-                                @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
-                                @Html.TextAreaFor(m => m.Notes,14,20, new { @class = "form-control" })
-                        </div>
-
-                </div>
-
-                <div class="col-md-12">
-                        <div class="pad-top">
-                                <button type="submit" class="btn btn-success btn-lg margin-right">
-                                        <span class="glyphicon glyphicon-save"></span> Save
-                                </button>
-                                <a href="@Url.Action("Index")" class="btn btn-warning btn-lg">
-                                        <span class="glyphicon glyphicon-remove"></span> Cancel
-                                </a>
-                        </div>
-                </div>
-
-        </div>
-}
+                        }
 
 
