--- a/aspnet-fitness-frog/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
+++ b/aspnet-fitness-frog/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
     <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
     <script>
             $('input.datepicker').datepicker({
-                    format : 'm/d/yyyy'
+                    format : 'mm/dd/yyyy'
             });
     </script>
 </body>
